# dachuang

./: .main.cpp.swp  Makefile  main  main.cpp
QtDemo/QtMavlinkDemo/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myserial.cpp  myserial.h
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-3305b41197cbd23cf65d.json  cmakeFiles-v1-d256bde7e49a1661f5be.json  codemodel-v2-47e9bcf1a2f94a518569.json  codemodel-v2-73392d4c051dcd5ff52b.json  index-2022-05-01T10-26-21-0009.json  target-QtMavlinkDemo-Debug-5db7cdf4c30bcf7802eb.json  (+2 more)
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/QtMavlinkDemo_autogen/: deps  mocs_compilation.cpp
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/QtMavlinkDemo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_myserial.cpp  moc_myserial.cpp.d
QtDemo/build-QtMavlinkDemo-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/QtMavlinkDemo_autogen/include/: ui_mainwindow.h
QtDemo/build-QtMavlinkDemo-unknown-Debug/: CMakeCache.txt  Makefile  QtMavlinkDemo  cmake_install.cmake
QtDemo/build-QtMavlinkDemo-unknown-Debug/QtMavlinkDemo_autogen/: moc_predefs.h
QtDemo/build-QtMavlinkDemo-unknown-Debug/QtMavlinkDemo_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_myserial.cpp  moc_myserial.cpp.d
QtDemo/build-QtMavlinkDemo-unknown-Debug/QtMavlinkDemo_autogen/include/: ui_dialog.h  ui_mainwindow.h
c_library_v1-master/common/: mavlink_msg_request_data_stream.h
c_library_v2-master/: mavlink_helpers.h
c_library_v2-master/minimal/: mavlink_msg_heartbeat.h
head/: debug.h  myserial.h
rsc/: debug.cpp
src/: myserial.cpp
(+212 files in other folders)
